# pycocowriter

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/: index.html
api/coco/: index.html
api/csv2coco/: index.html
api/utils/: index.html
docs/: README.md
pycocowriter/: coco.py  coco2huggingface.py  coco2yolo.py  coco_split_utils.py  csv2coco.py
search/: search_index.json
tests/: example_coco.json  test_csv2coco.py
