[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycocowriter"
version = "0.1.0"
description = "tools for writing coco files"
authors = [
    { name = "CScott Brown" },
]
dependencies = [
    "numpy",
    "jsonschema",
    "ultralytics"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
